tests/snapshots/cli_shield__shield_metrics_overview_table.snap
---
source: tests/cli_shield.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+--------------------------+-------+
| Category                 | Count |
+--------------------------+-------+
| DDoS Mitigated           | 142   |
+--------------------------+-------+
| WAF Triggered            | 87    |
+--------------------------+-------+
| Rate Limit Breaches      | 23    |
+--------------------------+-------+
| Bot Detection Challenged | 456   |
+--------------------------+-------+
| Access List Actions      | 12    |
+--------------------------+-------+
| Upload Scanning Blocks   | 3     |
+--------------------------+-------+
