tests/snapshots/cli_shield__shield_rate_limit_get_json.snap
---
source: tests/cli_shield.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "id": 8001,
  "shieldZoneId": 55001,
  "userId": "user-abc-123",
  "ruleName": "Limit Login Attempts",
  "ruleDescription": "Block after 10 requests in 60 seconds",
  "ruleJson": null,
  "ruleConfiguration": {
    "actionType": 1,
    "operatorType": 0,
    "severityType": 1,
    "requestCount": 10,
    "counterKeyType": 1,
    "timeframe": 60,
    "blockTime": 300
  },
  "errorResponse": null
}
