tests/snapshots/cli_shield__shield_rate_limit_list_json.snap
---
source: tests/cli_shield.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "id": 8001,
    "shield_zone_id": 55001,
    "rule_name": "Limit Login Attempts",
    "request_count": "10",
    "timeframe": "60s"
  }
]
