tests/snapshots/cli_shield__shield_waf_get_rule_json.snap
---
source: tests/cli_shield.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "id": 7001,
  "shieldZoneId": 55001,
  "userId": "user-abc-123",
  "ruleName": "Block SQL Injection",
  "ruleDescription": "Blocks common SQL injection patterns",
  "ruleJson": null,
  "ruleConfiguration": {
    "actionType": 1,
    "variableTypes": null,
    "operatorType": 2,
    "severityType": 2,
    "transformationTypes": null,
    "value": "SELECT",
    "chainedRuleConditions": null
  },
  "errorResponse": null
}
