tests/snapshots/cli_shield__shield_waf_list_rules_json.snap
---
source: tests/cli_shield.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "id": 7001,
    "shield_zone_id": 55001,
    "rule_name": "Block SQL Injection",
    "action_type": "Block"
  },
  {
    "id": 7002,
    "shield_zone_id": 55001,
    "rule_name": "Log XSS Attempts",
    "action_type": "LogOnly"
  }
]
